# rtl

./: .gitignore  makefile  pyproject.toml
bit/: flip_flop_xc7a35tcpg236-1.bit  flip_flop_xc7z010clg400-1.bit
hdl/: components.mk
hdl/components/: flip_flop.sv
hdl/interfaces/spi/: spi_main.sv
scripts/: determine_target_directory.py  setup.sh  synthesis_place_route.tcl
util/: util.py  verif.py
verif/py/: cocotb_runner.py  test_flip_flop.py
verif/py/interfaces/: test_spi_main.py
waves/interfaces/spi/: spi_main.gtkw  spi_main_mode_states.gtkw  spi_main_states.gtkw
xdc/components/: flip_flop_cmod-a7.xdc
