[project]
name = "rtl"
version = "0.1.0"
description = "a collection of rtl projects and modules"
authors = [{name = "Drew Pang"}]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cocotb = "^1.9.2"
cocotb-test = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
